resolved dark mode

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -8,7 +8,11 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
+  font-size: 62.5%; // 1rem = 10px
+
+  @include respond(phone) {
+    font-size: 50%; // 1rem = 8px, 8/16 = 50%
+  }
 }
 
 body {
@@ -26,7 +30,6 @@ body {
 }
 
 .grid-container {
-  margin-top: -5em;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
